# MobilePlantViT

./: .gitignore  MobilePlantViT.ipynb  README.md  pyproject.toml
notebooks/: 01_model_training.ipynb
src/api/: main.py
src/data/: dataloader.py  prepare_dataset.py
src/export/: export_onnx.py  export_tflite.py
src/model/: inference.py  model.py  train.py
src/utils/: image_utils.py
streamlit_app/: app.py
streamlit_app/model/: class_names.json
tests/: test_inference.py
